# chess_analysis

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg
src/chess_analysis/: __main__.py  config.py
src/chess_analysis/scraper/: __init__.py  abstract.py  chess_com.py  exceptions.py  lichess.py  mixins.py
src/chess_analysis/scraper/utils/: __init__.py  pgn_parser.py
tests/: test_pgn_parser.py
