[metadata]
name = chess_analysis 
version = 1.0
author = Nazar Annanazarov
author_email = youremail@email.com
description = Chess game scraper and analyzer
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license_files = LICENSE

[options]
package_dir =
    = src
packages = find:

[options.packages.find]
include = chess_analysis
